Fix scrolling ability on mobile layout

--- a/app/assets/stylesheets/common.css.sass
+++ b/app/assets/stylesheets/common.css.sass
@@ -18,8 +18,7 @@
     position: absolute
     height: 100%
     width: 100%
-    overflow-x: hidden
-    overflow-y: auto
+    overflow: auto
   .debuginfo
     padding: 12px 18px
     text-align: right
